# mcp-noob-toolkit

./: .env.example  .gitignore  README.md  hello.py  pyproject.toml
gmail_mcp_tool/: __init__.py  agent_client.py  config.py  gmail_mcp_server.py  helper.py  test.py
google_calender_mcp_tool/: __init__.py  agent_client.py  calendar_helper.py  config.py  google_calendar_mcp_tool.py
google_drive_mcp_tool/: __init__.py  agent_client.py  config.py  drive_helper.py  google_drive_mcp_tool.py
jira_mcp_tool/: __init__.py  agent_client.py  jira_mcp_server.py
playwright_mcp_tool/: agent_client.py  config.py
video_mcp_tool/: __init__.py  agent_client.py  video_mcp_server.py
